fixed hackathon alignment on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -34,9 +34,10 @@ main {
 
 .mobileHeader {
    display: inline-flex;
-   height: 62vh; /* HACK */
+   height:  43.5vh; /* HACK */
    background: url(../images/Datum.jpg) repeat center;
    background-size: cover;
+   position: relative;
 }
 
 section .content-wrapper {
@@ -230,8 +231,8 @@ br {
 }
 
 section:hover ~ .sensorthinks {
-   visibility: hidden;
-   opacity: 0;
+   visibility: visible;
+   opacity: 1.0;
    -webkit-transition: all .5s ease;
    -o-transition: all .5s ease;
    transition: all .5s ease;
@@ -250,7 +251,7 @@ section:hover ~ .sensorthinks {
    letter-spacing: 0.087em;
    margin-top: -0.05em;
    mix-blend-mode: screen;
-   top: 35vh;
+   bottom: 0;
    left: 1vw;
    transform: rotate(0deg);
    font-size: 12.6vw;
@@ -578,6 +579,16 @@ section:nth-child(9) .background {
       z-index: 1000;
    }
    
+   section:hover ~ .sensorthinks {
+      visibility: hidden;
+      opacity: 0.0;
+      -webkit-transition: all .5s ease;
+      -o-transition: all .5s ease;
+      transition: all .5s ease;
+      -webkit-transition-delay: 0.5s;
+         -o-transition-delay: 0.5s;
+            transition-delay: 0.5s;
+   }
 
    .sensorthinks {
       right: 31vw !important; 
